// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures output match: FormattedHTMLMessage 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.MyComponent = void 0;

var _react = require(\\"react\\");

var _react2 = require(\\"@lingui/react\\");

const MyComponent = () => {
  return (/*#__PURE__*/_react.React.createElement(_react.React.Fragment, null, /*#__PURE__*/_react.React.createElement(_react2.Trans, {
      id: \\"Hello {name}\\",
      defaults: \\"Hello {name}\\",
      values: {
        name: 'Hao'
      }
    }), /*#__PURE__*/_react.React.createElement(_react2.Trans, {
      id: \\"Online\\",
      defaults: \\"Online\\"
    }))
  );
};

exports.MyComponent = MyComponent;"
`;

exports[`fixtures output match: FormattedHTMLMessage 2`] = `
Object {
  "Hello {name}": Object {
    "defaults": "Hello {name}",
    "origin": Array [
      Array [
        "test/fixtures/FormattedHTMLMessage/actual.js",
        7,
      ],
    ],
  },
  "Online": Object {
    "defaults": "Online",
    "origin": Array [
      Array [
        "test/fixtures/FormattedHTMLMessage/actual.js",
        14,
      ],
    ],
  },
}
`;

exports[`fixtures output match: FormattedMessage 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.MyComponent = void 0;

var _react = require(\\"react\\");

var _react2 = require(\\"@lingui/react\\");

const MyComponent = () => {
  return (/*#__PURE__*/_react.React.createElement(_react.React.Fragment, null, /*#__PURE__*/_react.React.createElement(_react2.Trans, {
      id: \\"Hello\\",
      defaults: \\"Hello\\"
    }), /*#__PURE__*/_react.React.createElement(_react2.Trans, {
      id: \\"app.name\\",
      defaults: \\"You\\"
    }))
  );
};

exports.MyComponent = MyComponent;"
`;

exports[`fixtures output match: FormattedMessage 2`] = `
Object {
  "Hello": Object {
    "defaults": "Hello",
    "origin": Array [
      Array [
        "test/fixtures/FormattedMessage/actual.js",
        8,
      ],
    ],
  },
  "app.name": Object {
    "defaults": "You",
    "origin": Array [
      Array [
        "test/fixtures/FormattedMessage/actual.js",
        9,
      ],
    ],
  },
}
`;
